# mlops_project

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  pyproject.toml
app/: main.py
artifacts/: [features]_mean_imputer.joblib  [features]_scaler.joblib
data/preprocessed/: test_preprocessed.csv  train_preprocessed.csv
data/raw/: raw.csv
metrics/: evaluation.json  training.json
ml_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: model.pth
src/data_preprocessing/: preprocess_data.py
src/model_evaluation/: evaluate_model.py
src/model_training/: train_model.py
